test/e2e/features/listener_policy/testdata/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
  namespace: nginx
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTP
      port: 8081
      name: other
      allowedRoutes:
        namespaces:
          from: Same
