test/e2e/features/listener_policy/testdata/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: nginx
spec:
  parentRefs:
  - name: gw
    namespace: nginx
    sectionName: http
  hostnames:
  - "example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 8080
