test/e2e/features/listener_policy/testdata/listener-policy-all-fields.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: ListenerPolicy
metadata:
  name: http-listener-policy-all-fields
  namespace: nginx
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  default:
    httpSettings:
      useRemoteAddress: true
      xffNumTrustedHops: 2
      serverHeaderTransformation: AppendIfAbsent
      streamIdleTimeout: 30s
      acceptHttp10: true
      preserveExternalRequestId: true
      generateRequestId: false
      maxRequestHeadersKb: 64
      healthCheck:
        path: "/health_check"
