test/e2e/features/listener_policy/testdata/listener-policy-early-header-route-match.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: ListenerPolicy
metadata:
  name: early-header-route-match
  namespace: nginx
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  default:
    httpSettings:
      earlyRequestHeaderModifier:
        add:
        - name: "x-route-match"
          value: "allow"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-requires-header
  namespace: nginx
spec:
  hostnames:
  - example.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
    sectionName: http
  rules:
  - matches:
    - headers:
      - name: x-route-match
        value: allow
      path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 8080
