test/e2e/features/listener_policy/testdata/listener-policy-http2-protocol-options.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: ListenerPolicy
metadata:
  name: http2-protocol-options
  namespace: default
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  default:
    httpSettings:
      http2ProtocolOptions:
        initialConnectionWindowSize: 256Ki
        initialStreamWindowSize: 128Ki
        maxConcurrentStreams: 123
