test/e2e/features/listener_policy/testdata/listener-policy-max-requests-per-connection.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: ListenerPolicy
metadata:
  name: max-requests-per-connection
  namespace: default
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  default:
    httpSettings:
      maxRequestsPerConnection: 100
