test/e2e/features/listener_policy/testdata/listener-policy-missing-target.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: ListenerPolicy
metadata:
  name: http-listener-policy-server-header
  namespace: nginx
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: missing-gw
  default:
    httpSettings:
      serverHeaderTransformation: PassThrough
