test/e2e/features/listener_policy/testdata/listener-policy-preserve-request-id.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: ListenerPolicy
metadata:
  name: http-listener-policy-preserve-request-id
  namespace: nginx
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  default:
    httpSettings:
      preserveExternalRequestId: true
