test/e2e/features/listener_policy/testdata/local-reply-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: local-reply-route
  namespace: default
spec:
  parentRefs:
  - name: gw
    namespace: default
    sectionName: http
  hostnames:
  - "example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /direct-response
    filters:
      - type: ExtensionRef
        extensionRef:
          name: test
          group: gateway.kgateway.dev
          kind: DirectResponse
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: DirectResponse
metadata:
  name: test
spec:
  status: 200
  body: "custom body"
